# gsat-and-probsat

./: __init__.py  gsat.py  out.txt  probsat.py  pyproject.toml  randsat.py  requirements.txt  run_sasat.bash  sasat  sasat_eval.ipynb  sat.py  setup.py
python_gsat_probsat.egg-info/: PKG-INFO  SOURCES.txt
sat/: __init__.py  gsat.py  probsat.py  sat.py
uf100-430/: uf100-010.cnf  uf100-0100.cnf  uf100-01000.cnf  uf100-0101.cnf  uf100-0102.cnf  uf100-0103.cnf  uf100-0104.cnf  uf100-0105.cnf  uf100-0106.cnf  uf100-0107.cnf  uf100-0108.cnf  uf100-0109.cnf  uf100-011.cnf  uf100-0110.cnf  uf100-0111.cnf  uf100-0112.cnf  uf100-0113.cnf  uf100-0114.cnf  uf100-0115.cnf  uf100-0116.cnf  uf100-0117.cnf  uf100-0118.cnf  uf100-0119.cnf  uf100-012.cnf  uf100-0120.cnf  uf100-0121.cnf  uf100-0122.cnf  uf100-0123.cnf  uf100-0124.cnf  uf100-0125.cnf  uf100-0126.cnf  uf100-0127.cnf  uf100-0128.cnf  uf100-0129.cnf  uf100-013.cnf  uf100-0130.cnf  uf100-0131.cnf  uf100-0132.cnf  uf100-0133.cnf  uf100-0134.cnf  (+959 more)
uf50-218/: Source.txt
