[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[python_gsat_probsat]
name = "python_gsat_probsat"
version = "0.0.1"
authors = [
  { name="VChvojka", email="chvojvoj@cvut.cz" },
]
description = "GSAT and ProbSAT solvers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python_sat",
    "numpy"
]
packages = [
    { include = "sat" },
]

[project.urls]
Homepage = "https://github.com/chvojkav/gsat-and-probsat"
Issues = "https://github.com/chvojkav/gsat-and-probsat/issues"